--- a/src/main.css
+++ b/src/main.css
@@ -8,17 +8,35 @@ html {
 
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
 }
 
 .main {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.error {
+  color: red;
+  margin-bottom: 18px;
 }
 
 .bg-dark {
   background-color: #12002b;
+}
+
+.me-5 {
+  margin-right: 12px;
+}
+
+.input-wrapper-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input-wrapper-container {
+  width: 200px;
 }
 
 .sr-only {
